# vc-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cloudbuild.yaml  download_docs.py  skills-lock.json  system_review_20260422_1349.md
backend/: .env  (+11 more)
reference-project/agent-workspace-main/: .env  .gitignore  AGENTS.md  README.md  pyproject.toml
reference-project/agent-workspace-main/.agents/skills/ai-native-mvp-building/: SKILL.md
reference-project/agent-workspace-main/.agents/skills/docx/: SKILL.md
reference-project/agent-workspace-main/.agents/skills/pdf/: reference.md
reference-project/agent-workspace-main/.cursor/rules/: environment-windows-powershell.mdc  python-venv-usage.mdc
reference-project/agent-workspace-main/agent_workspace/: README.md  __init__.py  __main__.py  agent.py  cli.py  config.py  extractor.py  prompts.py  requirements.txt  utils.py  workspace.py
reference-project/agent-workspace-main/agent_workspace/tools/: __init__.py  extract_content.py  read_artifact.py  scan_resources.py  search_resources.py  write_artifact.py
reference-project/agent-workspace-main/apps/resume_screener/: README.md  verify_preview.py
reference-project/agent-workspace-main/apps/resume_screener/backend/: config.py  main.py  requirements.txt  screener.py  watcher.py
reference-project/agent-workspace-main/docs/: 01_BUILD_PLAN.md  02_MVP_DESIGN.md  03_USER_GUIDE.md  04_ARCHITECTURE.md  05_TESTING.md  06_E2E_RESULTS.md  07_MULTI_JD_DESIGN_PLAN.md  08_DATA_ORGANIZATION_DESIGN_PLAN.md  TODO.md
reference-project/agent-workspace-main/tests/: test_all.py  test_phase1.py
(+397 files in other folders)
